--- a/calculator.html
+++ b/calculator.html
@@ -6,8 +6,10 @@
     <title>底漆比例計算器</title>
     <style>
         body { font-family: Arial, sans-serif; text-align: center; margin: 20px; }
-        <div class="container" { max-width: 400px; margin: auto; }
+        .container { max-width: 400px; margin: auto; }
         input, select { margin: 5px; padding: 8px; font-size: 16px; }
+        table { width: 100%; margin-top: 20px; border-collapse: collapse; }
+        th, td { border: 1px solid black; padding: 10px; text-align: center; }
     </style>
 </head>
 <body>
@@ -28,6 +30,52 @@
         <input type="checkbox" id="addAB" onchange="calculate()">
         <h3>結果:</h3>
         <p id="result"></p>
+
+        <h3>實際操作步驟</h3>
+        <table>
+            <tr>
+                <th>步驟</th>
+                <th>操作</th>
+                <th>實際添加量 (g)</th>
+                <th>磅秤顯示 (g)</th>
+            </tr>
+            <tr>
+                <td>1</td>
+                <td>加入主劑（604）</td>
+                <td id="add1"></td>
+                <td id="step1"></td>
+            </tr>
+            <tr>
+                <td>2</td>
+                <td>加入硬化劑</td>
+                <td id="add2"></td>
+                <td id="step2"></td>
+            </tr>
+            <tr>
+                <td>3</td>
+                <td>加入溶劑</td>
+                <td id="add3"></td>
+                <td id="step3"></td>
+            </tr>
+            <tr id="rowA" style="display: none;">
+                <td>4</td>
+                <td>加入 A 劑</td>
+                <td id="addA"></td>
+                <td id="stepA"></td>
+            </tr>
+            <tr id="rowB" style="display: none;">
+                <td>5</td>
+                <td>加入 B 劑</td>
+                <td id="addB"></td>
+                <td id="stepB"></td>
+            </tr>
+            <tr>
+                <td>6</td>
+                <td>最終磅秤顯示</td>
+                <td>-</td>
+                <td id="step4"></td>
+            </tr>
+        </table>
     </div>
 
     <script>
@@ -40,12 +88,35 @@
             let solvent = main * (solventRatio / 4);
             let additiveA = addAB ? main * 0.02 : 0;
             let additiveB = addAB ? main * 0.02 : 0;
+            let totalWeight = main + hardener + solvent + additiveA + additiveB;
 
             document.getElementById("result").innerHTML =
                 `硬化劑: ${hardener.toFixed(2)} g<br>
                  溶劑: ${solvent.toFixed(2)} g<br>
                  A 劑量: ${additiveA.toFixed(2)} g<br>
                  B 劑量: ${additiveB.toFixed(2)} g`;
+
+            document.getElementById("add1").innerText = main.toFixed(2);
+            document.getElementById("add2").innerText = hardener.toFixed(2);
+            document.getElementById("add3").innerText = solvent.toFixed(2);
+            
+            document.getElementById("step1").innerText = main.toFixed(2);
+            document.getElementById("step2").innerText = (main + hardener).toFixed(2);
+            document.getElementById("step3").innerText = (main + hardener + solvent).toFixed(2);
+            
+            if (addAB) {
+                document.getElementById("rowA").style.display = "table-row";
+                document.getElementById("rowB").style.display = "table-row";
+                document.getElementById("addA").innerText = additiveA.toFixed(2);
+                document.getElementById("addB").innerText = additiveB.toFixed(2);
+                document.getElementById("stepA").innerText = (main + hardener + solvent + additiveA).toFixed(2);
+                document.getElementById("stepB").innerText = totalWeight.toFixed(2);
+            } else {
+                document.getElementById("rowA").style.display = "none";
+                document.getElementById("rowB").style.display = "none";
+            }
+
+            document.getElementById("step4").innerText = totalWeight.toFixed(2);
         }
 
         window.onload = calculate;
