--- a/calculator.html
+++ b/calculator.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>底漆比例計算</title>
+    <title>底漆比例計算器</title>
     <style>
         body { font-family: Arial, sans-serif; text-align: center; margin: 20px; }
         .container { max-width: 400px; margin: auto; }
@@ -14,7 +14,7 @@
 </head>
 <body>
     <div class="container">
-        <h2>底漆比例計算</h2>
+        <h2>底漆比例計算器</h2>
         <label for="main">主劑（604）重量(g): </label>
         <input type="number" id="main" value="400" min="1" oninput="calculate()">
         <br>
@@ -23,7 +23,7 @@
             <option value="0">0</option>
             <option value="1">1</option>
             <option value="2">2</option>
-            <option value="3">3</option>
+            <option value="3" selected>3</option>
         </select>
         <br>
         <label>加入 A/B 劑:</label>
